--- a/Bellman-Ford algorithm.ipynb
+++ b/Bellman-Ford algorithm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "06aef412-34de-4cdd-975d-5f58fe7c09d7",
    "metadata": {},
    "outputs": [
@@ -17,16 +17,18 @@
    ],
    "source": [
     "def bellman_ford(graph, start):\n",
-    "   \n",
+    "    # Initialize distances\n",
     "    distances = {node: float('inf') for node in graph}\n",
     "    distances[start] = 0\n",
     "    \n",
+    "    # Relax edges repeatedly\n",
     "    for _ in range(len(graph) - 1):\n",
     "        for node in graph:\n",
     "            for neighbor, weight in graph[node].items():\n",
     "                if distances[node] + weight < distances[neighbor]:\n",
     "                    distances[neighbor] = distances[node] + weight\n",
     "    \n",
+    "    # Check for negative cycles\n",
     "    for node in graph:\n",
     "        for neighbor, weight in graph[node].items():\n",
     "            if distances[node] + weight < distances[neighbor]:\n",
@@ -35,8 +37,6 @@
     "    return distances\n",
     "\n",
     "# Example \n",
-    "\n",
-    "# Example graph without negative cycles\n",
     "graph = {\n",
     "    'A': {'B': 6, 'C': 2},\n",
     "    'B': {'D': 1},\n",
@@ -45,7 +45,6 @@
     "    'E': {}\n",
     "}\n",
     "\n",
-    "# Test the algorithm with example graph\n",
     "start_node = 'A'\n",
     "try:\n",
     "    shortest_distances = bellman_ford(graph, start_node)\n",
@@ -54,6 +53,14 @@
     "except ValueError as e:\n",
     "    print(e)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eed78f25-2c32-4d9a-bee3-f8e71e188b21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
